--- a/To-Do-App.html
+++ b/To-Do-App.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>TO-Do-App</title>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>"PRACTICE MAKES PERFECT</h1>
